<resources>
    <string name="app_name">DAMEP_GERSONSAHUMA</string>
    <string name="textoApellidosNombre">Apellidos y nombre:</string>
    <string name="PlainText_Apellidos_Nombre">Apellidos y nombre</string>
    <string name="textView_Correo">Correo</string>
    <string name="text_view_Correo">Correo:</string>
    <string name="textView_clave">Clave:</string>
    <string name="textView_telefono">Teléfono:</string>
    <string name="textView_fecha">Fecha:</string>
    <string name="hora_nacimiento">Hora de nacimiento</string>
    <string name="zona_residencia">Zona de residencia</string>
    <string name="urbano">Urbano</string>
    <string name="Rural">Rural</string>
    <string name="cantidad_personas">¿Cuántas personas viven en la vivienda?</string>
    <string name="textviewIngreso">Ingreso promedio de familia:</string>
    <string name="numberdecimalIngreso" />
    <string name="textviewOpinion">¿Qué opina sobre los bonos otorgados por el gobierno?</string>
    <string name="textmultilineOpinion" />
    <string name="textviewMascotas">Mascotas que viven en casa:</string>
    <string name="checkboxPerro">Perro</string>
    <string name="checkboxGato">Gato</string>
    <string name="checkboxPollo">Pollo</string>
    <string name="checkboxPato">Pato</string>
    <string name="checkboxOtros">Otros</string>
    <string name="buttonEnviar">Enviar</string>
</resources>